<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Apollo</string>
    <string name="room_header">Room</string>
    <string name="add_room">New Room</string>

    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="empty_room_message">Room cannot be empty</string>
    <string name="successfully_saved_room_message">Room saved</string>
    <string name="cannot_connect_to_camera_message">Cannot connect to camera</string>
    <string name="take_picture">Add picture</string>
    <string name="take_picture_error">Could not take picture</string>

    <!--testing-->
    <string name="navigation_view_header_title">sample@gmail.com</string>

    <!--navbar-->
    <string name="navbar_login_hint">Please login in your account</string>
    <string name="navbar_my_rooms">My rooms</string>
    <string name="navbar_find_room">Find room</string>
    <string name="navbar_my_music">My music</string>
    <string name="navbar_find_place">Find place</string>

    <!--navbar-footer-->
    <string name="navbar_settings">Settings</string>
    <string name="navbar_feedback">Feedback</string>
    <string name="navbar_signout">Sign out</string>

    <!--sign-in-->
    <string name="sign_in_email">Sign in with email</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>

    <!--login-->
    <string name="log_in">Log in</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>

    <!--room-details-->
    <string name="details_users">Users</string>
    <string name="details_playlist">Playlist</string>
    <string name="details_location">Location</string>
    <string name="details_recommendations">Recommendations</string>
    <string name="room_image_description">Room image</string>
    <string name="location_icon_description">Location</string>
    <string name="heart_icon_description">Like</string>
    <string name="share_icon_description">Share</string>
    <string name="author_image_description">Room author</string>
    <string name="is_open_description">Is open</string>
    <string name="user_avatar">user avatar</string>

    <string name="like">Like</string>
    <string name="dislike">Dislike</string>

    <!--add rooms-->
    <string name="add_location_publicity">Public location</string>
    <string name="add_location_publicity_secondary">Show room location on details view</string>
    <string name="add_location_limit_primary">Location limit</string>
    <string name="add_location_limit_secondary">Use limit for new user connection locality</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="select_dialog_title">Select from:</string>
    <string name="version_name">version</string>
    <string name="my_rooms">My Rooms</string>
    <string name="all_rooms">All Rooms</string>

</resources>
