<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="244dp"
    android:background="@color/colorPrimary"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/dr_dim_effect">

                <ImageView
                    android:id="@+id/room_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/room_image_description"
                    android:foreground="@drawable/dr_dim_effect"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/room_image_description"
                    tools:src="@drawable/dr_gradient_3_colors_hot" />
            </FrameLayout>


            <ImageButton
                android:id="@+id/room_author_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:background="@drawable/ic_default_user_image"
                android:contentDescription="@string/author_image_description" />

            <ImageView
                android:id="@+id/room_is_open"
                style="@style/IconStyle"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:background="@null"
                android:contentDescription="@string/is_open_description"
                tools:background="@drawable/ic_lock_outline" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/room_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/PrimaryTextStyle"
                tools:text="Room title" />

            <ImageButton
                style="@style/IconStyle"
                android:background="@drawable/ic_map_marker"
                android:contentDescription="@string/location_icon_description" />

            <ImageButton
                style="@style/IconStyle"
                android:background="@drawable/ic_heart"
                android:contentDescription="@string/heart_icon_description" />

            <ImageButton
                style="@style/IconStyle"
                android:background="@drawable/ic_share_variant"
                android:contentDescription="@string/share_icon_description" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>