<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="150dp"
    android:background="@android:color/white"
    android:gravity="center"
    android:layout_height="80dp">
    <TextView
        android:text = "@string/select_dialog_title"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <View
        android:layout_width="match_parent"
        android:background="@color/colorDivider"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/from_gallery"
        android:text = "@string/select_from_gallery"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:layout_height="25dp" />
    <View
        android:layout_width="match_parent"
        android:background="@color/colorDivider"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/take_photo"
        android:text = "@string/take_photo"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:layout_height="25dp" />
</LinearLayout>