<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:id="@+id/footer_icon_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_settings"/>
        <TextView
            android:id="@+id/footer_item_1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingStart="18dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/navbar_settings" />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:id="@+id/footer_icon2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_feedback" />
        <TextView
            android:id="@+id/footer_item_2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingStart="18dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/navbar_feedback" />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:id="@+id/footer_icon3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_signout" />
        <TextView
            android:id="@+id/footer_item_3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingStart="18dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/navbar_signout" />

    </LinearLayout>
</LinearLayout>