<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/login_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="gear_animation.json"
        app:lottie_loop="true"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/select_provider_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        tools:visibility="gone">

        <LinearLayout
            android:id="@+id/email"
            style="@style/SignInButtonContainer">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="18dp"
                android:src="@drawable/ic_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in_email" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/google"
            style="@style/SignInButtonContainer">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="18dp"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in_google" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/facebook"
            style="@style/SignInButtonContainer">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="18dp"
                android:src="@drawable/ic_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in_facebook" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        tools:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etEmailLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/colorAccentTint"
            app:passwordToggleTint="@color/colorAccentTint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorAccentTint"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/colorAccentTint"
            app:passwordToggleTint="@color/colorAccentTint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorAccentTint"
                android:hint="@string/password_hint"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/next"
            style="@style/SignInButtonContainer">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:text="@string/log_in"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:src="@drawable/ic_chevron_right" />
        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>